frontend/assets/css/style.scss
/* ... */
div.logo.kcl-logo img {
  width: 20%;
}

div.logo img {
  width: 50%;
  height: auto;
  display: block;
  margin: auto;
}

.subtitle {
  color: #FFF;
  font-size: 16px;
  font-style: normal;
  font-weight: 200;
}

.homelandLabel {
  color: #FFF !important;
  font-family: Petrona, serif;
  font-style: italic;
  font-size: 20px;
  font-weight: 600;
  line-height: normal;

}


.highlight-euro {
  border-radius: 1em 0 1em 0;
  background-image: linear-gradient(
    -100deg,
    rgba(255, 20, 0, 0.2),
    rgba(255, 20, 0, 0.7) 95%,
    rgba(255, 20, 0, 0.1)
  );
}

.highlight-indig {
  border-radius: 1em 0 1em 0;
  background-image: linear-gradient(
    -100deg,
    rgba(255, 20, 0, 0.2),
    rgba(255, 20, 0, 0.7) 95%,
    rgba(255, 20, 0, 0.1)
  );
}

.info-box {
  border: 1px solid #000;
  opacity: 0.93;
  background: #FFF;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  padding: 2%;
margin-top: 20%;
  color: #000;
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 170%;
}

.quicklink-container {
  margin: 3%;
}

.quicklink {
  text-align: center;
  background: rgb(18, 77, 32, 0.1);
  padding-bottom: 1%;
  width: 20%;
  color: #000;
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 180%; /* 28.8px */
  border-top: 5px solid #124D20;
}

.quicklink-text {
  padding: 10%;
  height: 5vw;
  font-size: 100%;
}

.quicklink-spacer {
  margin-right: 5%;
}

div.quicklink .info-button {
  color: #000;
  border: 1.5px solid var(--Primary-Variant-1, #124D20);
  background: #FFF;

  margin-left: 10%;
  margin-right: 10%;
}

.info-button {
  background: var(--Primary-1, #132B19);
  text-align: center;

  color: #FFF;
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  text-transform: uppercase;
  margin-top: 5%;
}

.info-button a {
  text-decoration: none;
  display: block;
  width: 100%;
  padding: 1%;
}

.info-button a:hover {
  background: var(--Primary-1, #132B19);
  color: #FFF;
}

// position: fixed;
// margin-top: 5%;

.footer {
  bottom: 1;
  margin-top: 5%;
}

.footer hr {
  background: var(--Primary-Variant-1, #124D20);
}

header {
  height: 5%;

}

div.home-container {
  max-width: 1920px;
  margin-left: auto;
  margin-right: auto;
}

div.container {
  max-width: 1920px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 24px;
}

div.footer-bottom {
  background: var(--Primary-1, #132B19);
  width: 100%;
}

div.footer-bottom div.develop {
  color: #FFF;
  font-family: "Jost", sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
  text-align: center;
}



// GENERAL

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  width: 100%;
  padding: 0;
  margin: 0 auto;
  font-family: "Jost", sans-serif;
}

a {
  &:hover {
    opacity: 0.7;
  }

  //&hover
}

//a

a#sitetitle {
  color: white;
  text-decoration: none;
  padding-left: 1%;
  display: block;
  z-index: 9;
  font-size: 22px;
  line-height: 1.2;
  @include transition(all 250ms ease-in);
  &:hover{
    opacity: 0.8;
  }
}
// a#sitetitle

// NAV
nav {
  top: 0;
  position: fixed;
  width: 100%;
  border-bottom: 4px solid darken($lightgreen, 20%);
  background: $darkgreen;
  padding-bottom: 0.1em;
}

//nav
#mainmenu {
  .active {
    color: darken($lightgreen, 5%);
    border-left: 0.1em solid darken($lightgreen, 5%);
    padding-left: 0.5em;
  }

  > ol {
    //1st level
    position: fixed;
    z-index: 999;
    height: 100vh;
    width: 18em;
    top: 0;
    right: -100vw;
    margin: 0;
    @include transition(all 300ms ease-in);
    background: lighten(black, 12%);
    padding: 5em 0 0 3em;
    line-height: 1.4;
    overflow: scroll;
    text-align: left;

    > li {
      display: block;
      margin-bottom: 1em;

      > a {
        font-size: 1.6em;
        text-decoration: none;
        display: block;
        line-height: 1;
        color: white;
      }

      //a
      &:last-of-type {
        padding-bottom: 50vh;
      }

      //&:not(:last-of-type)
      > ol {
        //2nd level
        margin-bottom: 1em;

        li {
          list-style-type: none;

          a {
            color: white;
            text-decoration: none;
          }

          //a
        }

        //li
      }

      //ol
    }

    //li
  }

  /* end ol*/
  > label {
    display: block;
    @include transition(all 250ms ease-in);
    cursor: pointer;
    position: fixed;
    padding: 0.5em 0.5em;
    background: transparent;
    top: 0;
    right: 0;
    font-size: 20px;
    font-weight: 300;
    color: white;
    z-index: 9999;
    &:hover{
      opacity: 0.8;
    }
  }

  input#menu[type="checkbox"] {
    display: none;
  }

  input#menu[type="checkbox"]:checked ~ ol {
    margin: 0;
    right: 0;
  }

  input#menu[type="checkbox"]:checked ~ label.menu {
    right: 2em;
    @include transform(rotate(0));
    background: none;
    @include transition(all 400ms ease-in);
    /* cross icon */
    &:before {
      content: "✖";
      position: fixed;
      right: -1.8em;
      top: 0.6em;
      height: 1.7em;
      width: 1.7em;
      text-align: center;
      /* font-weight: 100; */
      color: white;
      cursor: pointer;
      font-size: 20px;
    }
  }
}

/* end #menu*/
// END MENU

// BASEMAP
#basemap {
  z-index: 0 !important;
  position: fixed;
  top: 44px;
  height: calc(100% - 44px);
  width: 100%;

  .leaflet-map-pane {
    filter: grayscale(22%) sepia(10%) saturate(92%) contrast(92%);
  }

  //.leaflet-map-pane
}
/* ... */

